feat: When a user is an admin they are allowed to see the admin page and kicks jwt editing
