# frontend/src/lib/openapi.yaml
@@ -90,6 +90,27 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/handlers.Error"
+  /auth/verify:
+    get:
+      description: Verify that the JWT token is valid and has not been tampered with
+      tags:
+        - auth
+      summary: Verify JWT token
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                additionalProperties:
+                  type: boolean
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/handlers.Error"
   /blips:
     get:
       description: Get all blips
@@ -472,380 +493,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/handlers.Error"
-  /user-technologies:
-    post:
-      description: Assign a technology to a user with a ring
-      tags:
-        - user-technologies
-      summary: Create a user technology
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/handlers.CreateUserTechnologyRequest"
-        description: UserTechnology data
-        required: true
-      responses:
-        "201":
-          description: Created
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/handlers.UserTechnology"
-        "400":
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/handlers.Error"
-        "500":
-          description: Internal Server Error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/handlers.Error"
-  "/user-technologies/user/{user_id}":
-    get:
-      description: Get all technologies assigned to a user
-      tags:
-        - user-technologies
-      summary: Get technologies for a user
-      parameters:
-        - description: User ID
-          name: user_id
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/handlers.UserTechnology"
-        "400":
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/handlers.Error"
-        "500":
-          description: Internal Server Error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/handlers.Error"
-  "/user-technologies/{id}":
-    get:
-      description: Get user technology by ID
-      tags:
-        - user-technologies
-      summary: Get a user technology
-      parameters:
-        - description: UserTechnology ID
-          name: id
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/handlers.UserTechnology"
-        "400":
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/handlers.Error"
-        "404":
-          description: Not Found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/handlers.Error"
-        "500":
-          description: Internal Server Error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/handlers.Error"
-    put:
-      description: Update user technology ring
-      tags:
-        - user-technologies
-      summary: Update a user technology
-      parameters:
-        - description: UserTechnology ID
-          name: id
-          in: path
-          required: true
-          schema:
-            type: string
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/handlers.UpdateUserTechnologyRequest"
-        description: UserTechnology data
-        required: true
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/handlers.UserTechnology"
-        "400":
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/handlers.Error"
-        "500":
-          description: Internal Server Error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/handlers.Error"
-    delete:
-      description: Delete user technology by ID
-      tags:
-        - user-technologies
-      summary: Delete a user technology
-      parameters:
-        - description: UserTechnology ID
-          name: id
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        "204":
-          description: No Content
-        "400":
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/handlers.Error"
-        "500":
-          description: Internal Server Error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/handlers.Error"
-  /users:
-    get:
-      description: Get all users
-      tags:
-        - users
-      summary: Get all users
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/handlers.User"
-        "500":
-          description: Internal Server Error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/handlers.Error"
-    post:
-      description: Create a new user
-      tags:
-        - users
-      summary: Create a user
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/handlers.CreateUserRequest"
-        description: User data
-        required: true
-      responses:
-        "201":
-          description: Created
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/handlers.User"
-        "400":
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/handlers.Error"
-        "500":
-          description: Internal Server Error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/handlers.Error"
-  "/users/by-email/{email}":
-    get:
-      description: Get user by email
-      tags:
-        - users
-      summary: Get a user by email
-      parameters:
-        - description: User email
-          name: email
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/handlers.User"
-        "400":
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/handlers.Error"
-        "404":
-          description: Not Found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/handlers.Error"
-        "500":
-          description: Internal Server Error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/handlers.Error"
-  "/users/{id}":
-    get:
-      description: Get user by ID (only own profile or admin)
-      tags:
-        - users
-      summary: Get a user
-      parameters:
-        - description: User ID
-          name: id
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/handlers.User"
-        "400":
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/handlers.Error"
-        "403":
-          description: Forbidden
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/handlers.Error"
-        "404":
-          description: Not Found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/handlers.Error"
-        "500":
-          description: Internal Server Error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/handlers.Error"
-    put:
-      description: Update user by ID (only own profile or admin)
-      tags:
-        - users
-      summary: Update a user
-      parameters:
-        - description: User ID
-          name: id
-          in: path
-          required: true
-          schema:
-            type: string
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/handlers.UpdateUserRequest"
-        description: User data
-        required: true
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/handlers.User"
-        "400":
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/handlers.Error"
-        "403":
-          description: Forbidden
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/handlers.Error"
-        "500":
-          description: Internal Server Error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/handlers.Error"
-    delete:
-      description: Delete user by ID
-      tags:
-        - users
-      summary: Delete a user
-      parameters:
-        - description: User ID
-          name: id
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        "204":
-          description: No Content
-        "400":
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/handlers.Error"
-        "500":
-          description: Internal Server Error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/handlers.Error"
 servers:
   - url: //localhost:8080
 components:
@@ -913,32 +560,6 @@ components:
           type: string
         quadrant_id:
           type: integer
-    handlers.CreateUserRequest:
-      type: object
-      properties:
-        email:
-          type: string
-        hashed_password:
-          type: string
-        id:
-          type: string
-        last_logged_in:
-          type: string
-        name:
-          type: string
-        username:
-          type: string
-    handlers.CreateUserTechnologyRequest:
-      type: object
-      properties:
-        id:
-          type: string
-        ring_id:
-          type: integer
-        technology_id:
-          type: string
-        user_id:
-          type: string
     handlers.Error:
       type: object
       properties:
@@ -980,72 +601,3 @@ components:
           type: string
         quadrant_id:
           type: integer
-    handlers.UpdateUserRequest:
-      type: object
-      properties:
-        email:
-          type: string
-        hashed_password:
-          type: string
-        last_logged_in:
-          type: string
-        name:
-          type: string
-        role:
-          type: string
-        username:
-          type: string
-    handlers.UpdateUserTechnologyRequest:
-      type: object
-      properties:
-        ring_id:
-          type: integer
-        technology_id:
-          type: string
-        user_id:
-          type: string
-    handlers.User:
-      type: object
-      properties:
-        created_at:
-          type: string
-          example: 2026-04-05T12:00:00Z
-        email:
-          type: string
-          example: john@example.com
-        hashed_password:
-          type: string
-          example: hashed_password_value
-        id:
-          type: string
-          example: 550e8400-e29b-41d4-a716-446655440000
-        last_logged_in:
-          type: string
-          example: 2026-04-05T12:00:00Z
-        name:
-          type: string
-          example: John Doe
-        username:
-          type: string
-          example: johndoe
-    handlers.UserTechnology:
-      type: object
-      properties:
-        created_at:
-          type: string
-          example: 2026-04-05T12:00:00Z
-        id:
-          type: string
-          example: 550e8400-e29b-41d4-a716-446655440000
-        ring_id:
-          type: integer
-          example: 2
-        technology_id:
-          type: string
-          example: 550e8400-e29b-41d4-a716-446655440000
-        updated_at:
-          type: string
-          example: 2026-04-05T12:00:00Z
-        user_id:
-          type: string
-          example: 550e8400-e29b-41d4-a716-446655440000
